--- a/loja-pixeltech-backend/.env
+++ b/loja-pixeltech-backend/.env
@@ -1,2 +1,2 @@
-MONGO_URI=mongodb+srv://AnaLeao:1234@cluster0.p9ycwqb.mongodb.net/pixeltech?retryWrites=true&w=majority
+MONGO_URI=SEUCLUSTER
 PORT=3000
