--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI - PixelTech
+name: CI - Node.js
 
 on:
   push:
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout do código
+      - name: Checkout do repositório
         uses: actions/checkout@v4
 
       - name: Configurar Node.js
@@ -20,9 +20,10 @@ jobs:
           node-version: 18
 
       - name: Instalar dependências
-        working-directory: loja-pixeltech-backend
         run: npm install
 
-      - name: Rodar aplicação (check básico)
-        working-directory: loja-pixeltech-backend
-        run: node index.js
+      - name: Verificar versão do Node
+        run: node -v
+
+      - name: CI finalizado com sucesso
+        run: echo "CI executado com sucesso 🚀"
